// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/SelectDropdown Aucune Option Selectionee 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 -ml-2 text-left"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
  />
</button>
`;

exports[`Storyshots ui/shared/SelectDropdown Option Selectionee 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 -ml-2 text-left"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto"
  >
    Option 2
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
  />
</button>
`;
